# laughing-couscous

./: .clang-format  .gitignore  .gitmodules  README.md  build-boost-arm.sh  project-config.jam  setup_arm.sh  setup_plugin.sh
.github/workflows/: arduino.yml  cmake.yml
ansible/: .gitignore  ansible.cfg  static_site.cfg
ansible/playbook/: README.md  build_and_run.yml  setup_pi.yml
documents/: rules and strategy
firmware/: README.md
firmware/libraries/Flag/: Flag.cpp  Flag.h
firmware/libraries/GameTimer/: GameTimer.cpp  GameTimer.h
firmware/libraries/Grabber/: Grabber.cpp  Grabber.h
firmware/libraries/Leds/: Leds.cpp  Leds.h
firmware/libraries/Md25/: Md25.cpp  Md25.h
firmware/libraries/MessageParser/: CommandData.h  MessageParser.cpp  MessageParser.h
firmware/libraries/Srf02/: Srf02.cpp  Srf02.h
firmware/libraries/md25/: md25.h
firmware/main/: Grabber  Leds  Md25  MessageParser  Srf02  Switches  main.ino
firmware/md25TestSerial/: md25TestSerial.ino
firmware/testMessageParserLibrary/: MessageParser  testMessageParserLibrary.ino
firmware/testRoutine/: Flag  GameTimer  Md25  testRoutine.ino
firmware/testmd25Library/: md25  md25.cpp  md25.h  testmd25Library.ino
hardware/: README.md
hardware/grabber/: pinca4_v-1.stl  pinca4_v-2.stl  pinca4_v.STL  pincaServ1.STL  supportServo.gcode  supportservomoteur1.skp  supportservomoteur1.stl
software/: CMakeLists.txt  Toolchain-rpi.cmake  readme.md
software/application/: CMakeLists.txt
software/application/src/: main.cpp
software/application_test_gui/: CMakeLists.txt
software/application_test_gui/include/: CouscousManager.h
software/application_test_gui/src/: CouscousManager.cpp  main.cpp
software/applications/: CMakeLists.txt
software/applications/application_1/: CMakeLists.txt
software/applications/application_1/src/: main.cpp
software/applications/application_gui/: CMakeLists.txt
software/applications/application_gui/src/: main.cpp
software/applications/application_gui_simulator/: CMakeLists.txt
software/applications/application_gui_simulator/src/: main.cpp
software/applications/application_integration/: CMakeLists.txt
software/applications/application_integration/src/: main.cpp
software/applications/couscous/: CMakeLists.txt  mission.json  mission_blue.json  mission_yellow.json
software/applications/couscous/src/: CouscousManager.cpp  CouscousManager.h  main.cpp
software/applications/navi_app/: CMakeLists.txt
software/applications/navi_app/src/: RobotController.cpp  RobotController.h  main.cpp
software/libs/: CMakeLists.txt
software/libs/logger/: CMakeLists.txt
software/libs/logger/include/logger/: LoggerFactory.h
software/libs/logger/src/: LoggerFactory.cpp
software/modules/: CMakeLists.txt
software/modules/application/: CMakeLists.txt
software/modules/application/src/: main.cpp
software/modules/couscous_manager/: CMakeLists.txt
software/modules/couscous_manager/include/: CouscousManager.h  CouscousManagerGui.h
software/modules/couscous_manager/src/: CouscousManager.cpp  CouscousManagerGui.cpp
software/modules/gui/: CMakeLists.txt
software/modules/gui/include/: IWebServerListener.h  IWebServerRequestListener.h  WebPositionService.h  WebServer.h
software/modules/gui/src/: WebPositionService.cpp  WebServer.cpp  main.cpp  registry.cpp  registry.h  registry_element.cpp  registry_element.h
software/modules/gui/src/hw_sim/: hw_simulator.cpp  hw_simulator.h
software/modules/gui/src/protos/: robot.proto
software/modules/gui/src/webInterface/: messages_handler.cpp  messages_handler.h  web_ws.cpp  web_ws.hpp
software/modules/gui/web/: .env  .gitignore  README.md  control.html  generate-grpc-files.sh  index.html  javascript_client_example.html  menu.html  package-lock.json  package.json  tailwind.config.js  test.html
software/modules/gui/web/src/: App.css  App.tsx  index.css  index.tsx
software/modules/gui/web/src/components/: Block.tsx  CommunicationProvider.tsx  StateProvider.tsx
software/modules/gui/web/src/components/arena/: Arena.tsx  Buoy.tsx  Joystick.tsx  PositionIndicator.tsx  Robot.tsx  Target.tsx
software/modules/gui/web/src/hooks/: window.ts
software/modules/gui/web/src/interfaces/: position.ts  size.ts
software/modules/gui/web/try/: mobile (copy).html
software/modules/hali/: CMakeLists.txt  MessageParser.cpp  MessageParser.h  README.md  Serial.h  main.cpp
software/modules/hali/include/: CommandData.h  CommandInterpreter.h  HalReal.h  HalSimu.h  Hali.h  IHali.h  IHaliEncodersListener.h  IHaliListener.h  IHaliSpeedListener.h  MessageParser.h  Serial.h  hali.h
software/modules/hali/src/: CommandInterpreter.cpp  CommandInterpreter.h  HalReal.cpp  HalSimu.cpp  Hali.cpp  MessageParser.cpp  MessageParser.h  Serial.cpp  SimpleSerial.h  hali.cpp
software/modules/hali/test/: main.cpp
software/modules/missi/: CMakeLists.txt
software/modules/missi/include/: Action.h  Missi.h
software/modules/missi/src/: Missi.cpp
software/modules/missi/test/: list.json  main.cpp  testTimeout.cpp
software/modules/moti/: CMakeLists.txt
software/modules/moti/include/: Moti.h
software/modules/moti/src/: Moti.cpp
software/modules/moti/test/: main.cpp
software/modules/navi/: CMakeLists.txt
software/modules/navi/include/: INaviRequestListener.h  Navi.h  NaviRegulator.h  NaviStateMachine.h  NaviUtils.h
software/modules/navi/src/: Navi.cpp  NaviRegulator.cpp  NaviStateMachine.cpp  NaviUtils.cpp
software/modules/navi/test/: NaviStateMachineTest.cpp  NaviTest.cpp  NaviUtilsTest.cpp
software/modules/posi/: CMakeLists.txt
software/modules/posi/include/: FakeTime.h  IBaseTime.h  IPositionListener.h  Posi.h  RealTime.h
software/modules/posi/src/: FakeTime.cpp  FakeTime.h  Posi.cpp  RealTime.cpp
software/modules/posi/test/: PosiTest.cpp
software/modules/utils/: CMakeLists.txt
software/modules/utils/include/: Position.h  PositionOrientation.h  RobotState.h  Types.h  constant.h
tools/ansible/: .gitignore  ansible.cfg
tools/arduino-cli/: install.sh
tools/docker/: Dockerfile  docker-compose.yml  envoy.Dockerfile  envoy.yml
(+33 files in other folders)
